Add logging and google login to auth_service
