# backend/services/auth_service/src/middlewares/validators.middleware.ts
@@ -1,5 +1,5 @@
 import { NextFunction, Request, Response } from "express";
-import { check, validationResult } from "express-validator";
+import { body, validationResult } from "express-validator";
 
 export const checkValidationResult = (req: Request, res: Response, next: NextFunction) => {
     const errors = validationResult(req);
@@ -17,13 +17,13 @@ export const checkValidationResult = (req: Request, res: Response, next: NextFun
 
 export const validateRegister = () => {
     return [
-        check("name", "name must not empty").not().isEmpty(),
-        check("name", "name must be Alphanumeric").isAlphanumeric("vi-VN", {
+        body("name", "name must not empty").not().isEmpty(),
+        body("name", "name must be Alphanumeric").isAlphanumeric("vi-VN", {
             ignore: " ",
         }),
-        check("email", "email must not empty").not().isEmpty(),
-        check("email", "Invalid email").isEmail(),
-        check("password", "password must not less than 8 characters").isLength({
+        body("email", "email must not empty").not().isEmpty(),
+        body("email", "Invalid email").isEmail(),
+        body("password", "password must not less than 8 characters").isLength({
             min: 8,
         }),
     ];
@@ -31,47 +31,53 @@ export const validateRegister = () => {
 
 export const validateLogin = () => {
     return [
-        check("email", "email must not empty").not().isEmpty(),
-        check("email", "Invalid email").isEmail(),
-        check("password", "password must not empty").not().isEmpty(),
+        body("email", "email must not empty").not().isEmpty(),
+        body("email", "Invalid email").isEmail(),
+        body("password", "password must not empty").not().isEmpty(),
     ];
 };
 
 export const validateRefreshTokenRequest = () => {
     return [
-        check("refreshToken", "refreshToken must not empty").not().isEmpty(),
-        check("userId", "userId must not empty").not().isEmpty(),
+        body("refreshToken", "refreshToken must not empty").not().isEmpty(),
+        body("userId", "userId must not empty").not().isEmpty(),
     ];
 };
 
 export const validateConfirmEmailRequest = () => {
     return [
-        check("token", "token must not empty").not().isEmpty(),
-        check("userId", "userId must not empty").not().isEmpty(),
+        body("token", "token must not empty").not().isEmpty(),
+        body("userId", "userId must not empty").not().isEmpty(),
     ];
 };
 
 export const validateResendConfirmEmailRequest = () => {
     return [
-        check("email", "email must not empty").not().isEmpty(),
-        check("email", "Invalid email").isEmail(),
+        body("email", "email must not empty").not().isEmpty(),
+        body("email", "Invalid email").isEmail(),
     ];
 };
 
 export const validateSendResetPasswordLinkRequest = () => {
     return [
-        check("email", "email must not empty").not().isEmpty(),
-        check("email", "Invalid email").isEmail(),
+        body("email", "email must not empty").not().isEmpty(),
+        body("email", "Invalid email").isEmail(),
     ];
 };
 
 export const validateResetPasswordRequest = () => {
     return [
-        check("token", "token must not empty").not().isEmpty(),
-        check("userId", "userId must not empty").not().isEmpty(),
-        check(
+        body("token", "token must not empty").not().isEmpty(),
+        body("userId", "userId must not empty").not().isEmpty(),
+        body(
             "newPassword",
             "newPassword must not less than 8 characters"
         ).isLength({ min: 8 }),
+    ];
+};
+
+export const validateGoogleLogin = () => {
+    return [
+        body("idToken", "idToken must not empty").not().isEmpty(),
     ];
 };
